fix text wrap on album names

--- a/src/app/album/album.component.scss
+++ b/src/app/album/album.component.scss
@@ -6,6 +6,9 @@ ul {
 
 li {
   display: inline;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .tn {
